# user-info-service/src/main/java/com/javaworld/instagram/userinfoservice/integration/PostsCountResponseApiDto.java
@@ -1,0 +1,25 @@
+package com.javaworld.instagram.userinfoservice.integration;
+
+public class PostsCountResponseApiDto {
+
+	private Integer postsCount;
+
+	private String serviceAddress;
+
+	public Integer getPostsCount() {
+		return postsCount;
+	}
+
+	public void setPostsCount(Integer postsCount) {
+		this.postsCount = postsCount;
+	}
+
+	public String getServiceAddress() {
+		return serviceAddress;
+	}
+
+	public void setServiceAddress(String serviceAddress) {
+		this.serviceAddress = serviceAddress;
+	}
+
+}
