# user-info-service/src/main/java/com/javaworld/instagram/userinfoservice/service/dto/ProfileDetails.java
@@ -1,0 +1,33 @@
+package com.javaworld.instagram.userinfoservice.service.dto;
+
+public class ProfileDetails {
+
+	private int postsCount;
+	private int followersCount;
+	private int followingCount;
+
+	public int getPostsCount() {
+		return postsCount;
+	}
+
+	public void setPostsCount(int postsCount) {
+		this.postsCount = postsCount;
+	}
+
+	public int getFollowersCount() {
+		return followersCount;
+	}
+
+	public void setFollowersCount(int followersCount) {
+		this.followersCount = followersCount;
+	}
+
+	public int getFollowingCount() {
+		return followingCount;
+	}
+
+	public void setFollowingCount(int followingCount) {
+		this.followingCount = followingCount;
+	}
+
+}
